created "AddTodo" functionality, stylesheets, more..

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -13,3 +13,23 @@ a {
     color: []#333;
     text-decoration: none;
 }
+
+.container {
+    /* add padding on left and right */
+    padding: 0 1rem; 
+}
+
+.btn {
+    /* set up our button appearance */
+    display: inline-block;
+    border: none;
+    background: #555;
+    color: #fff;
+    padding: 7px 20px;
+    cursor: pointer;
+}
+
+.btn:hover {
+    /* when you hover over btn */
+    background: #666;
+}
